Add Abstract in EN/PT. Add dedication page. Add empty pages.

--- a/texto.tex
+++ b/texto.tex
@@ -42,30 +42,39 @@ Engenharia da Universidade do Porto}
 \supervisor{Ricardo Rocha}
 \beforepreface
 
-%\begin{titlepage}
+\newpage
+\thispagestyle{plain}
+\mbox{}
 
-%\begin{center}
+\dedicationpage{\Large{To my parents}}
+
+\newpage
+\thispagestyle{plain}
+\mbox{}
+
+\prefacesection{Acknowledgments}
+  I would like to thank...
   
-%\textsc{\large Flávio Manuel Fernandes Cruz}\\[1.5cm]
+\newpage
+\thispagestyle{plain}
+\mbox{}
 
-%\textsc{\LARGE Call Subsumption Mechanisms for Tabled Logic Programs}
-%\begin{figure}[ht]
-%  \centering
-%  \includegraphics[scale=1.0]{feup.pdf}
-%\end{figure}
+\prefacesection{Abstract}
+\input{abstract}
 
 
-%\textsc{\large Faculdade de Engenharia da Universidade do Porto\\ \small Rua Dr. Roberto Frias, s/n \\ 4200-465 Porto PORTUGAL}\\[1.5cm]
-  
-%\end{center}
-%\end{titlepage}
+\newpage
+\thispagestyle{plain}
+\mbox{}
 
-\addcontentsline{toc}{chapter}{Contents}
-\tableofcontents
-\listoffigures
-\listoftables
-%\listofalgorithms
-\clearpage
+\prefacesection{Resumo}
+\input{abstract_pt}
+
+\newpage
+\thispagestyle{plain}
+\mbox{}
+
+\afterpreface
 
 \chapter{Introduction}
 \input{introduction}
