fix some layout problems.

--- a/texto.tex
+++ b/texto.tex
@@ -95,6 +95,7 @@ Engenharia da Universidade do Porto}
 \input{results}
 
 \chapter{Conclusions and further work}
+\input{conclusions}
 
 \appendix
 \input{appendix_code}
